--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,4 +1,6 @@
 spring:
   application:    name: myvalue
+  profiles:
+    active: dev,tester
   cloud:    config:      enabled: true
       uri: http://localhost:8888
